# gdcli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  dev.py  dev.sh  pyproject.toml
cli/: Cargo.toml  build.rs
cli/src/: embedded_addon.rs  exec.rs  gdapi_meta.rs  install.rs  main.rs  project.rs
cli/src/commands/: lsp.rs  mod.rs
cli/src/format/: clap_style.rs  mod.rs  normalize.rs  toon.rs
cli/src/lsp/: client.rs  mod.rs  symbol_path.rs  transport.rs  types.rs
cli/tests/: addon_deploy_test.rs  exec_integration.rs  lsp_port_discovery.rs  lsp_subcommand.rs  mock_lsp.rs
docs/: gdapi-route-hot-reload-note.md  get-editor-logs.md  handoff.md
docs/handoff/: handoff.md
docs/papers/: 2026-06-27-godot-tools-comparative-research.md  2026-06-27-godot-tools-fresh-research-with-gdcli.md
docs/req/: gdcli-扩展为通用godot编辑器操作工具.md
docs/superpowers/plans/: 2026-06-16-gd-lsp-cli.md  2026-06-17-native-symbol-progressive-doc.md  2026-06-23-improvements-batch-fix.md  2026-06-23-main-split-and-debug-output.md  2026-06-23-phase1-gdapi-minimal-e2e.md  2026-06-23-phase2-gdcli-install.md  2026-06-23-phase3-cli-restructure.md  2026-06-23-phase4-route-migration.md  2026-06-23-phase5-lsp-port-discovery.md  2026-06-24-exec-cleanup-unify-terminology.md  2026-06-24-exec-toon-output.md  2026-06-24-gdapi-req-res-refactor.md  2026-06-24-gdapi-rust-robustness.md  2026-06-24-help-command-and-self-doc.md  2026-06-24-req-log-methods-plan.md  2026-06-24-todo-items-implementation-plan.md  2026-06-27-exec-clap-style-output.md  2026-06-27-gdcli-m1-route-infrastructure.md  2026-07-21-gdcli-m1-infrastructure-closure.md  2026-07-21-gdcli-m2-basic-editing.md  2026-07-21-gdcli-m2-implementation-review.md  2026-07-21-gdcli-m3-runtime-validation.md  2026-07-21-gdcli-m4-game-systems.md  2026-07-21-gdcli-m5-project-diagnostics-export.md  2026-07-21-gdcli-m6-high-risk-capabilities.md  final-review-package.diff  task-1-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-3-review-package.diff  task-4-report.md
docs/superpowers/specs/: 2026-06-16-gd-lsp-cli-design.md  2026-06-16-symbol-path-lookup-design.md  2026-06-17-native-symbol-progressive-doc-design.md  2026-06-23-gdcli-godot-editor-tool-design.md  2026-06-24-exec-toon-output-design.md  (+8 more)
docs/tasks/: task-1-brief.md  task-1-review-package.diff  task-2-review-package.diff  task-4-brief.md  task-4-review-package.diff  task-5-brief.md  task-5-report.md
gdapi/addon/: gdapi.gdextension  gdapi.gdextension.uid  plugin.cfg  plugin.gd  plugin.gd.uid
gdapi/rust/: Cargo.toml
gdapi/rust/src/: http.rs  lib.rs  queue.rs  server.rs
gdapi/rust/tests/: server_e2e.rs
scripts/: e2e-m1-smoke.ps1  e2e-m1-smoke.py  e2e-m1-smoke.sh  e2e-ping.ps1  e2e-ping.py  e2e-ping.sh  setup-dev.py  setup-dev.sh
src/: client.rs  main.rs  symbol_path.rs  transport.rs  types.rs
tests/: mock_lsp.rs
tests/e2e/: conftest.py  test_e2e_ping.py  test_edit_action.py  test_gdscript_units.py  test_m1_contracts.py  test_m1_scene_safety.py  test_m1_smoke.py  test_version_gate.py
tests/fixture_project/: .gitignore  project.godot  test.tscn
(+231 files in other folders)
