[package]
name = "gdcli"
version = "0.1.0"
edition = "2024"
description = "CLI that talks to Godot's built-in LSP — rename, references, definition"
license = "MIT"

[[bin]]
name = "gdcli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "fs"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
percent-encoding = "2"
bytes = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
