[package]
name = "gdcli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Godot editor: LSP client + HTTP exec via gdapi addon"

[[bin]]
name = "gdcli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "fs"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
percent-encoding = "2"
bytes = "1"
ureq = { version = "2", default-features = false, features = ["json"] }
include_dir = "0.7"
toon-format = { version = "0.5", default-features = false }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
httpmock = "0.7"
