[package]
name = "gdapi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "gdapi"

[dependencies]
godot = { version = "0.5", features = ["api-4-3"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
httparse = "1"
