[package]
name = "gdapi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gdapi"

[dependencies]
godot = { version = "0.5", features = ["api-4-3"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
httparse = "1"

[dev-dependencies]
ureq = { version = "2", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
